--- a/src/css/style.css
+++ b/src/css/style.css
@@ -11,15 +11,16 @@
   justify-content: center;
   align-items: center;
 }
+
 .header__logo {
   width: 50px;
 }
+
 .content {
   display: flex;
   justify-content: center;
   padding: 0 20px;
 }
-
 
 .card {
   width: 600px;
@@ -42,6 +43,7 @@
   border: 1px solid #e2e2e2;
   box-sizing: border-box;
 }
+
 @media (min-width: 601px) {
   .tasks__add__D {
     width: 20%;
@@ -52,14 +54,13 @@
     cursor: pointer;
  
   }
+
   .tasks__add__M {
     display: none;
   }
 }
 
-.tasks__add:hover {
-  background-color: rgba(0,0,0,0.5);
-}
+
 .task {
   display: flex;
   justify-content: space-between;
@@ -79,8 +80,40 @@
   padding: 10px 5px;
 }
 
+.task__change {
+  display: none;
+}
 
-.checkbox  {
+.task__change__active {
+  display: flex;
+  align-items: center;
+  flex-grow: 1;
+
+}
+.task__input__button {
+  width: 35px;
+  height: 35px;
+  background-image: url(../img/checkmark-outline_icon-icons.com_73300.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 35px;
+  background-color: white;
+  border: none;
+  margin-left: 10px;
+}
+
+.change {
+  width: 35px;
+  height: 35px;
+  background-image: url(../img/edit_icon_197778.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: 35px;
+  background-color: white;
+  margin-right: 10px;
+}
+
+.checkbox {
   width: 30px;
   height: 30px;
   border: 2px solid #000000;
@@ -88,10 +121,7 @@
   margin-right: 10px;
 }
 
-.checkbox:hover {
-  background-color: rgba(0,0,0,0.3);
-  border-radius: 5px;
-}
+
 
 .checkbox__active {
   background-image: url(../img/checkmark-outline_icon-icons.com_73300.png);
@@ -111,12 +141,7 @@
   background-repeat: no-repeat;
   background-size: 25px;
 }
-.task__remove:hover {
-  background-color: rgba(0,0,0,0.3);
-  border-radius: 5px;
-}
-
-
+ 
 
 @media (max-width: 600px) {
   .tasks__add__D {
@@ -137,7 +162,9 @@
     border: 1px solid #e2e2e2;
   }
 
-  .tasks__add__M:hover {
-    background-color: rgba(0,0,0,0.3);
-  }
+}
+
+.tasks__add:hover, .change:hover, .checkbox:hover, .task__remove:hover, .tasks__add__M:hover, .task__input__button:hover {
+  background-color: rgba(0,0,0,0.5);
+  border-radius: 5px;
 }
